--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DiffUtilRV</string>
     <string name="sort_by_name">Sort by name</string>
     <string name="sort_by_role">Sort by role</string>
+    <string name="sort_by_cost">Sort by cost</string>
 </resources>
